fix: Fixing dark mode text color not readable

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,18 +10,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 9, 9, 11;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground: 9, 9, 11;
   }
 
   .dark {
-    --foreground-rgb: 250, 250, 250
+    --foreground: 250, 250, 250
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
+@layer base {
+  body {
+    @apply text-foreground;
+  }
 }
 
 @layer utilities {
